fixing dark mode

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,5 @@
 /* Global Styles */
-body {
+body, content {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #eef2f7;
     margin: 0;
@@ -194,6 +194,16 @@ form input:focus, form select:focus, form textarea:focus {
     background-color: #004d40;
 }
 
+.animal-image {
+    position: absolute;
+    height: 200px;    /* Mantém a proporção da imagem */
+    display: block;  /* Garante que a imagem seja tratada como um bloco */
+    right: 0; /* Empurra o botão para a extrema direita */
+    padding-right: 140px;
+    z-index: 2; /* Garante que a imagem fique sobre o texto */
+}
+
+
 /* Botão de Dark Mode */
 #darkModeToggle {
     margin-left: auto; /* Empurra o botão para a extrema direita */
@@ -275,124 +285,128 @@ form input:focus, form select:focus, form textarea:focus {
 
 
 /* dark mode implementation */
-body.dark-mode {
-    background-color: #212529;
-    color: #ced4da;
+/* Global Styles for Dark Mode */
+.dark-mode, content {
+    background-color: #1f1f1f;
+    color: #e0e0e0;
 }
 
-h1.dark-mode, h2.dark-mode {
-    color: #f8f9fa;
+.dark-mode h1, .dark-mode h2 {
+    color: #e0e0e0;
 }
 
 .dark-mode a {
-    color: #86d4b6;
+    color: #80cbc4;
 }
 
 .dark-mode a:hover {
-    color: #64a680;
+    color: #4db6ac;
 }
 
-/* Container for Page Content */
-body.dark-mode .container {
-    background-color: #2c3036;
+/* Container Styling */
+.dark-mode .container {
+    background-color: #1f1f1f;
 }
 
 /* Table Styling */
-body.dark-mode table {
-    background-color: #343a40;
-    box-shadow: none;
+.dark-mode table {
+    background-color: #262626;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-body.dark-mode th {
-    background-color: #495057;
-    color: #f8f9fa;
+.dark-mode th {
+    background-color: #004d40;
+    color: #e0e0e0;
 }
 
-body.dark-mode td {
-    color: #ced4da;
+.dark-mode td {
+    color: #b0b0b0;
 }
 
-body.dark-mode tr:nth-child(even) {
-    background-color: #2e3338;
+.dark-mode tr:nth-child(even) {
+    background-color: #303030;
 }
 
-body.dark-mode tr:hover {
-    background-color: #495057;
+.dark-mode tr:hover {
+    background-color: #3e3e3e;
 }
 
-/* Forms Styling */
-body.dark-mode form {
-    background-color: #2c3036;
-    border: 1px solid #495057;
+/* Form Styling */
+.dark-mode form {
+    background-color: #262626;
+    border: 1px solid #444;
 }
 
-body.dark-mode form label {
-    color: #ced4da;
+.dark-mode form label {
+    color: #e0e0e0;
 }
 
-body.dark-mode form input, 
-body.dark-mode form select, 
-body.dark-mode form textarea {
-    background-color: #3e444a;
-    border: 1px solid #6c757d;
-    color: #f8f9fa;
+.dark-mode form input, .dark-mode form select, .dark-mode form textarea {
+    background-color: #333;
+    color: #e0e0e0;
+    border: 1px solid #555;
 }
 
-body.dark-mode form button {
-    background-color: #495057;
-    color: #f8f9fa;
+.dark-mode form input:focus, .dark-mode form select:focus, .dark-mode form textarea:focus {
+    border-color: #80cbc4;
+    box-shadow: 0 0 5px rgba(128, 203, 196, 0.5);
 }
 
-body.dark-mode form button:hover {
-    background-color: #6c757d;
+.dark-mode form button {
+    background-color: #004d40;
+    color: #e0e0e0;
 }
 
-/* Form Fields Focus Effect */
-body.dark-mode form input:focus, 
-body.dark-mode form select:focus, 
-body.dark-mode form textarea:focus {
-    border-color: #64a680;
-    box-shadow: 0 0 5px rgba(100, 166, 128, 0.2);
+.dark-mode form button:hover {
+    background-color: #00796b;
 }
 
 /* Button Styling */
-body.dark-mode .btn {
-    background-color: #495057;
+.dark-mode .btn {
+    background-color: #004d40;
+    color: #e0e0e0;
 }
 
-body.dark-mode .btn:hover {
-    background-color: #6c757d;
+.dark-mode .btn:hover {
+    background-color: #00796b;
 }
 
 /* Navbar Styling */
-body.dark-mode .navbar {
-    background-color: #343a40;
+.dark-mode .navbar {
+    background-color: #004d40;
 }
 
-body.dark-mode .navbar a {
-    color: #f8f9fa;
+.dark-mode .navbar a {
+    color: #e0e0e0;
 }
 
-body.dark-mode .navbar a:hover {
-    background-color: #495057;
+.dark-mode .navbar a:hover {
+    background-color: #00796b;
 }
 
-body.dark-mode .navbar a.active {
-    background-color: #212529;
+.dark-mode .navbar a.active {
+    background-color: #00251a;
 }
 
 /* Hemograma Card Styling */
-body.dark-mode .hemograma-card {
-    background-color: #343a40;
-    color: #ced4da;
+.dark-mode .hemograma-card {
+    background-color: #262626;
+    color: #e0e0e0;
 }
 
-body.dark-mode .hemograma-card h3 {
-    color: #f4978e; /* Cor do título */
+.dark-mode .hemograma-card h3 {
+    color: #ff7043;
 }
 
-body.dark-mode .hemograma-card p {
-    color: #adb5bd;
+.dark-mode .hemograma-card p {
+    color: #b0b0b0;
+}
+
+/* Error Message Styling */
+.dark-mode .error {
+    background-color: #2d2d2d;
+    color: #ff6e6e;
+    border-color: #ff6e6e;
 }
 
 /* PDF */
@@ -469,5 +483,124 @@ body.dark-mode .hemograma-card p {
 footer {
     text-align: center;
     padding: 1rem;
-  }
+}
   
+/* PDF */
+
+/* Estilo do container principal */
+#exame-info {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.dark-mode #exame-info {
+    background-color: #2c2c2c;
+    color: #ccc;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+}
+
+/* Título geral */
+#exame-info h3 {
+    font-size: 1.5em;
+    border-bottom: 2px solid #4caf50;
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    color: #4caf50;
+}
+
+.dark-mode #exame-info h3 {
+    border-bottom-color: #76ff03;
+    color: #76ff03;
+}
+
+/* Estilo dos parágrafos com dados */
+#exame-info p {
+    margin: 10px 0;
+    font-size: 1.1em;
+    line-height: 1.6;
+    color: #333;
+}
+
+.dark-mode #exame-info p {
+    color: #ddd;
+}
+
+/* Estilo dos textos fortes (nomes dos campos) */
+#exame-info p strong {
+    color: #333;
+    font-weight: 600;
+}
+
+.dark-mode #exame-info p strong {
+    color: #fff;
+}
+
+/* Layout de informações */
+#animal-info, #medvet-info, #cliente-info, #hemograma-card {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #fafafa;
+    border-left: 5px solid #4caf50;
+    border-radius: 5px;
+}
+
+.dark-mode #animal-info, 
+.dark-mode #medvet-info, 
+.dark-mode #cliente-info, 
+.dark-mode #hemograma-card {
+    background-color: #3b3b3b;
+    border-left-color: #76ff03;
+}
+
+/* Botão PDF */
+#download-pdf {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #4caf50;
+    color: white;
+    font-size: 1.2em;
+    text-align: center;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.dark-mode #download-pdf {
+    background-color: #76ff03;
+    color: #000;
+}
+
+/* Hover para o botão */
+#download-pdf:hover {
+    background-color: #45a049;
+}
+
+.dark-mode #download-pdf:hover {
+    background-color: #64dd17;
+}
+
+/* Footer */
+footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: transparent;
+}
+
+.dark-mode footer {
+    color: #ccc;
+}
+
+/* Impressão */
+@media print {
+    #hemograma-card {
+        transform: scale(0.8); /* Reduz o tamanho */
+        transform-origin: top left; /* Define a origem da transformação */
+    }
+}
